<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen"
    tools:layout_editor_absoluteY="25dp">

    <EditText
        android:id="@+id/playerSearchEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/playerSearch"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/teamSearchEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:hint="@string/teamSearch"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/playerSearchButton"
        app:layout_constraintTop_toBottomOf="@+id/playerSearchButton" />

    <Button
        android:id="@+id/statSearchButton"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/statSearchButton"
        app:layout_constraintBottom_toTopOf="@+id/addPlayerButton"
        app:layout_constraintStart_toStartOf="@+id/addPlayerButton" />

    <Button
        android:id="@+id/playerSearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchButton"
        app:layout_constraintStart_toStartOf="@+id/playerSearchEditText"
        app:layout_constraintTop_toBottomOf="@+id/playerSearchEditText" />

    <Button
        android:id="@+id/teamSearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchButton"
        app:layout_constraintStart_toStartOf="@+id/teamSearchEditText"
        app:layout_constraintTop_toBottomOf="@+id/teamSearchEditText" />

    <Button
        android:id="@+id/addPlayerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:text="@string/addPlayerButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>

